--- a/app/src/main/res/layout/item_listview_main.xml
+++ b/app/src/main/res/layout/item_listview_main.xml
@@ -128,6 +128,7 @@
             android:background="@drawable/bg_comment">
 
             <LinearLayout
+                android:id="@+id/commentLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_centerVertical="true"
