--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -42,12 +42,14 @@
             android:layout_height="0.5dp"
             android:background="@color/red" />
 
-        <android.support.v7.widget.RecyclerView
+        <com.aspsine.irecyclerview.IRecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            app:refreshEnabled="true"
+            app:refreshHeaderLayout="@layout/layout_irecyclerview_refresh_header">
 
-        </android.support.v7.widget.RecyclerView>
+        </com.aspsine.irecyclerview.IRecyclerView>
     </LinearLayout>
 
     <include
