--- a/app/src/main/res/layout/start_up_tutorial_page3.xml
+++ b/app/src/main/res/layout/start_up_tutorial_page3.xml
@@ -14,10 +14,13 @@
             android:layout_height="match_parent"
             android:scaleType="fitXY" />
 
-        <com.example.levanhao.splashapp.view.customview.tutorial.ImageViewFrame
+        <ImageView
             android:id="@+id/ensureImg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="right"
+            android:layout_marginRight="50dp"
+            android:layout_marginTop="50dp"
             android:src="@drawable/ensurance_icon" />
 
 
@@ -37,13 +40,11 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="25dp"
-
             android:gravity="center_horizontal"
             android:maxLines="2"
             android:textColor="@color/black"
             android:textSize="18dp"
             android:textStyle="bold" />
-
 
     </FrameLayout>
 
