--- a/app/src/main/res/layout/activity_sell_product.xml
+++ b/app/src/main/res/layout/activity_sell_product.xml
@@ -130,19 +130,21 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:padding="@dimen/dimen_5dp">
 
                 <android.support.v7.widget.SwitchCompat
-                    android:id="@+id/freeSwitch"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:id="@+id/tgb_ban_nhanh"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true" />
+                    android:layout_centerVertical="true"
+                    android:padding="0dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_toStartOf="@+id/freeSwitch"
+                    android:layout_toStartOf="@+id/tgb_ban_nhanh"
                     android:orientation="vertical"
                     android:paddingStart="@dimen/dimen_10dp">
 
@@ -174,19 +176,21 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:padding="@dimen/dimen_5dp">
 
                 <android.support.v7.widget.SwitchCompat
-                    android:id="@+id/fastSellSwitch"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:id="@+id/fastSell"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true" />
+                    android:layout_centerVertical="true"
+                    android:checked="true" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_toStartOf="@+id/fastSellSwitch"
+                    android:layout_toStartOf="@+id/fastSell"
                     android:orientation="vertical"
                     android:paddingStart="@dimen/dimen_10dp">
 
@@ -219,19 +223,21 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:padding="@dimen/dimen_5dp">
 
                 <android.support.v7.widget.SwitchCompat
-                    android:id="@+id/aSwitch"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:id="@+id/a"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true" />
+                    android:layout_centerVertical="true"
+                    android:checked="true" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_toStartOf="@+id/aSwitch"
+                    android:layout_toStartOf="@+id/a"
                     android:orientation="vertical"
                     android:paddingStart="@dimen/dimen_10dp">
 
