--- a/app/src/main/res/layout/start_up_tutorial_page2.xml
+++ b/app/src/main/res/layout/start_up_tutorial_page2.xml
@@ -62,8 +62,6 @@
                 android:adjustViewBounds="true"
                 android:src="@drawable/tutorial_main_view"
                 android:visibility="visible" />
-
-
         </ScrollView>
 
     </FrameLayout>
@@ -73,9 +71,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="bottom"
-        android:layout_weight="1.8"
-
-        >
+        android:layout_weight="1.8">
 
         <TextView
             android:id="@+id/third_page_text"
@@ -84,10 +80,9 @@
             android:layout_marginBottom="120dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="50dp"
             android:gravity="center_horizontal"
             android:maxLines="2"
-            android:text="aaaaaaaa"
             android:textColor="#000"
             android:textSize="18dp"
             android:textStyle="bold" />
